# Webots-ROS2-TurCobot

./: .gitignore  Makefile  TODO.md  robot_state_publisher_param.txt  rtabmap_param.txt  stereo_image_proc_param.txt  stereo_odometry_param.txt  stereo_odometry_param2.txt  view_map.py
src/my_create/: package.xml  setup.cfg  setup.py
src/my_create/launch/: mycreate_launch.py
src/my_create/my_create/: abstacle_avoidance_algorithm.py  direction.py  my_model.py  my_robot_driver.py  package.xml  robot_util.py  setup.cfg  setup.py  vision_node.py
src/my_create/my_create_bringup/: package.xml  setup.cfg  setup.py
src/my_create/my_create_bringup/launch/: my_create_launch.py
src/my_create/my_create_description/: package.xml  setup.cfg  setup.py
src/my_create/my_create_description/launch/: launch.py
src/my_create/my_create_driver/: package.xml  setup.cfg  setup.py
src/my_create/my_create_driver/my_create_driver/: driver.py  my_model.py  robot_util.py  server.py
src/my_create/protos/: KukaBox.proto  MyCreate.proto  TurtleBot3Waffle.proto  ball_small.proto  box_large.proto  box_medium.proto  gripper.proto
src/my_create/resource/: MyCreate.urdf
src/my_create/worlds/: .alpha.wbproj  .apartment.wbproj  .school-obstacle.wbproj  alpha.wbt  making_gripper.wbt  school-obstacle.wbt
src/my_create_map_webots/: package.xml  setup.cfg  setup.py
src/my_create_map_webots/launch/: mycreate_launch.py  mycreate_launch_kinect.py  world_launch.py
src/my_create_map_webots/my_create_map_webots/: MySupervisorDriver.py  my_create_driver.py  my_create_driver_kinect.py  vision_node.py
src/my_create_map_webots/protos/: Create.proto  Door.proto  MyCobot280Pi.proto  MyCobot280Pi_solid.proto  MyCreate.proto  MyCreate_kinect.proto  MyCustomArmchair.proto  MyCustomSofa.proto  (+2 more)
src/my_package/: CMakeLists.txt  NOTE.md  TODO.md  package.xml  setup.py
src/the_interfaces/: CMakeLists.txt  package.xml
(+32 files in other folders)
