<?xml version="1.0"?>
<package format="3">
  <name>my_create</name>
  <version>0.0.1</version>
  <description>ROS2 package for MyCreate robot in Webots</description>
  <maintainer email="jorden90573@gmail.com">jordenhuang</maintainer>
  <license>Apache-2.0</license>

  <!-- <buildtool_depend>ament_python</buildtool_depend> -->
  
  <depend>rclpy</depend>
  <!-- <depend>sensor_msgs</depend> -->
  <!-- <depend>std_msgs</depend> -->
  <depend>geometry_msgs</depend>
  <depend>webots_ros2_driver</depend>

  <!-- <exec_depend>opencv-python</exec_depend> -->
  <!-- <exec_depend>numpy</exec_depend> -->
  

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
