<?xml version="1.0"?>
<package format="3">
  <name>my_create</name>
  <version>0.0.1</version>
  <description>ROS2 package for MyCreate robot in Webots</description>
  <maintainer email="jorden90573@gmail.com">jordenhuang</maintainer>
  <license>Apache-2.0</license>

  <!-- 構建工具依賴，必須放在頂層 -->
  <buildtool_depend>ament_python</buildtool_depend>
  
  <!-- 核心依賴 -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>webots_ros2_driver</depend>

  <!-- 
    如果您需要用到 numpy，請取消下一行的註解。
    注意：rosdep key 是 python3-numpy，不是 numpy 
  -->
  <!-- <exec_depend>python3-numpy</exec_depend> -->
  
  <!-- 測試依賴 -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <!-- 告訴 colcon 這是個 python 套件 -->
    <build_type>ament_python</build_type>
  </export>
</package>
